--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
 _site/
 .sass-cache/
+.DS_Store
+*.sublime-project
+*.sublime-workspace
+codekit-config.json
+node_modules
+_asset_bundler_cache
+.sass-cache
 .jekyll-metadata
