--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
 # Site wide configuration
 
-title:
+title: Pencil2D
 description:
 logo: # 120x120 px default image used for Twitter summary card
 teaser: # 400x250 px default teaser image used in image archive grid
 locale: en
-url:
+url: http://localhost:4000/
 
 # Jekyll configuration
 
@@ -36,9 +36,9 @@ titlecase: true
 
 
 # Site owner
-owner:
-  name:
-  email:
+owner: chchwy
+  name: chchwy
+  email: chchwy@gmail.com
   twitter:
   google:
     ad-client:
