Top level pages

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -11,12 +11,12 @@
   image:
  
 - title: Community
-  url: /community/
+  url: /
   excerpt: "Join the Pencil2D community!"
   image:
 
 - title: Docs
-  url: /docs/
+  url: /doc/
   excerpt: "User Manual"
   image:
  
