--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,7 @@
 # Site navigation links
 
 - title: Download
-  url: /Download/
+  url: /download/
   excerpt: "Download the executables."
   image:
   
