FAQ update: Maing page link and page content dump.

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site wide configuration
 
 title: Pencil2D
-description:
+description: Pencil2D is a free and open-source 2D animation software available for Windows, Mac OS, and Linux.
 logo: # 120x120 px default image used for Twitter summary card
 teaser: # 400x250 px default teaser image used in image archive grid
 locale: en
