--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,12 @@
 # Site wide configuration
 
 title: Pencil2D
-description: Pencil2D is a free and open-source 2D animation software available for Windows, Mac OS, and Linux.
-logo: # 120x120 px default image used for Twitter summary card
+description: "Pencil2D is a free and open-source 2D animation software available for Windows, Mac OS, and Linux."
+logo: Pencil2d_logo.jpg # 120x120 px default image used for Twitter summary card
 teaser: # 400x250 px default teaser image used in image archive grid
 locale: en
 url: https://pencil2d.github.io
+#url: http://localhost:4000
 
 # Jekyll configuration
 
