Update social media sharing image (maybe?

--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ theme: # leave it empty
 
 # social
 author: "Pencil2D"
-image: /thumbnail-jumbo.png
+image: /images/pencil_icon.png
 
 twitter:
   username: pencil2d
