--- a/_config.yml
+++ b/_config.yml
@@ -34,6 +34,9 @@ github:
   owner_url: "https://github.com/pencil2d/pencil"
   owner_name: "pencil2d"
 
+bitbucket:
+  url: "https://bitbucket.org/chchwy/pencil2d"
+
 download:
   win64: https://github.com/pencil2d/pencil/releases/download/0.6-rc/pencil2d-win64-2017-11-15.zip
   win32: https://github.com/pencil2d/pencil/releases/download/0.6-rc/pencil2d-win32-2017-11-15.zip 
