--- a/_config.yml
+++ b/_config.yml
@@ -38,11 +38,11 @@ bitbucket:
   url: "https://bitbucket.org/chchwy/pencil2d"
 
 download:
-  win64: https://github.com/pencil2d/pencil/releases/download/0.6-rc/pencil2d-win64-2017-11-15.zip
-  win32: https://github.com/pencil2d/pencil/releases/download/0.6-rc/pencil2d-win32-2017-11-15.zip 
-  mac: https://github.com/pencil2d/pencil/releases/download/0.6-rc/pencil2d-mac-2017-11-15.zip
-  linux: https://github.com/pencil2d/pencil/releases/download/0.6-rc/pencil2d-linux-2017-11-15.AppImage
-  win64-size: 40MB
-  win32-size: 34.8MB
+  win64: https://github.com/pencil2d/pencil/releases/download/0.6.0/pencil2d-win64-0.6.0.zip
+  win32: https://github.com/pencil2d/pencil/releases/download/0.6.0/pencil2d-win32-0.6.0.zip
+  mac: https://github.com/pencil2d/pencil/releases/download/0.6.0/pencil2d-mac-0.6.0.zip
+  linux: https://github.com/pencil2d/pencil/releases/download/0.6.0/pencil2d-linux-amd64-0.6.0.AppImage
+  win64-size: 49.6MB
+  win32-size: 43.7MB
   mac-size: 41.7MB
-  linux-size: 37.5MB
+  linux-size: 37.6MB
