--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Pencil2D Animation
-description: An easy, intuitive tool to make 2D hand-drawn animations.
+title: "Pencil2D - opensource animation software"
+description: "An easy, intuitive tool to make 2D hand-drawn animations."
 show_downloads: true
 
 baseurl: "" # change this to the subpath of your site, e.g. /blog. Leave it empty if you don't need it.
