--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: "Pencil2D - opensource animation software"
+title: "Pencil2D Animation"
 description: "An easy, intuitive tool to make 2D hand-drawn animations."
 show_downloads: true
 
