Revert "Change config"
This reverts commit d4a77ff3050289175e6323e53ae8792740251881.

Sorry about this. I will try to arrange my fork differently in
the future to avoid this problem.

--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,8 @@ title: "Pencil2D Animation"
 description: "An easy, intuitive tool to make 2D hand-drawn animations."
 show_downloads: true
 
-baseurl: "/pencil2d.github.io" # change this to the subpath of your site, e.g. /blog. Leave it empty if you don't need it.
-url: "https://scribblemaniac.github.io" # change this to the base hostname & protocol for your site
+baseurl: "" # change this to the subpath of your site, e.g. /blog. Leave it empty if you don't need it.
+url: "https://www.pencil2d.org" # change this to the base hostname & protocol for your site
 
 permalink: /:year/:month/:title.html
 
