--- a/_config.yml
+++ b/_config.yml
@@ -3,8 +3,8 @@ tagline: "Open Source animation software"
 description: "An easy, intuitive tool to make 2D hand-drawn animations."
 show_downloads: true
 
-baseurl: "" # change this to the subpath of your site, e.g. /blog. Leave it empty if you don't need it.
-url: "https://www.pencil2d.org" # change this to the base hostname & protocol for your site
+#baseurl: "" # change this to the subpath of your site, e.g. /blog. Leave it unset if you don't need it.
+#url: "https://www.pencil2d.org" # change this to the base hostname & protocol for your site
 
 permalink: /:year/:month/:title.html
 
